<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".fragments.OptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="horizontal"
        android:padding="36dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/number_of_questions"
            android:textColor="@color/material_on_background_emphasis_medium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_options_fragment_num_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="3"
            android:inputType="number"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="horizontal"
        android:padding="36dp">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preferred_category"
            android:textColor="@color/material_on_background_emphasis_medium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_options_fragment_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:entries="@array/categories" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="horizontal"
        android:padding="36dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/difficulty"
            android:textColor="@color/material_on_background_emphasis_medium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/rdbtn_options_fragment_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/easy"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rdbtn_options_fragment_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/medium"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rdbtn_options_fragment_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hard"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/imgbutton_options_fragment_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_round"
        android:src="@drawable/selector_btn_play" />

</LinearLayout>